shopizer-local/k8s/ingress/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraform-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
          - path: /merchant
            pathType: Prefix
            backend:
              service:
                name: merchant
                port:
                  number: 80
          - path: /references
            pathType: Prefix
            backend:
              service:
                name: references
                port:
                  number: 80
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shop
                port:
                  number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80
    - host: keycloak
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
